# src/routes.ts
@@ -19,19 +19,26 @@ router.get("/clients", async (req, res) => {
   }
 });
 
-router.get("/clients/:cnpj", async (req, res) => {
-  // #swagger.tags = ['Clients']
-  // #swagger.description = 'Endpoint to get one Client by cnpj.'
-
-  const cnpj = req.params.cnpj;
-  const clientRep = new ClientRepository();
-  try {
-    const foundClient = await clientRep.findByCnpj(cnpj);
-    res.status(200).send(foundClient);
-  } catch (err) {
-    res.status(400).send(err);
+router.get(
+  "/clients/:cnpj",
+  param("cnpj").custom(isValidCnpj),
+  async (req, res) => {
+    // #swagger.tags = ['Clients']
+    // #swagger.description = 'Endpoint to a Clients by cnpj.'
+    const cnpj = req.params.cnpj;
+    const clientRep = new ClientRepository();
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(400).json({ errors: errors.array() });
+    }
+    try {
+      const foundClient = await clientRep.findByCnpj(cnpj);
+      res.status(200).send(foundClient);
+    } catch (err) {
+      res.status(404).send("Client not found.");
+    }
   }
-});
+);
 
 router.post(
   "/clients",
@@ -60,31 +67,41 @@ router.patch(
   async (req, res) => {
     // #swagger.tags = ['Clients']
     // #swagger.description = 'Endpoint to update any data of one Client.'
+    const clientRep = new ClientRepository();
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
       return res.status(400).json({ errors: errors.array() });
     }
-    const cnpj = req.params.cnpj;
-    const clientRep = new ClientRepository();
-    const updated = await clientRep.update(cnpj, req.body);
-    res.status(200).send(updated);
+    try {
+      const cnpj = req.params.cnpj;
+      clientRep.findByCnpj(cnpj);
+      const updated = await clientRep.update(cnpj, req.body);
+      res.status(200).send(updated);
+    } catch (err) {
+      res.status(404).send("Client not found.");
+    }
   }
 );
 
 router.delete(
   "/clients/:cnpj",
   param("cnpj").trim().custom(isValidCnpj),
-  (req, res) => {
+  async (req, res) => {
     // #swagger.tags = ['Clients']
     // #swagger.description = 'Endpoint to delete one Client by cnpj.'
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
       return res.status(400).json({ errors: errors.array() });
     }
-    const cnpj = req.params.cnpj;
     const clientRep = new ClientRepository();
-    clientRep.delete(cnpj);
-    res.status(200).send(`deleted client.`);
+    const cnpj = req.params.cnpj;
+    try {
+      await clientRep.findByCnpj(cnpj);
+      clientRep.delete(cnpj);
+      res.status(200).send(`deleted client.`);
+    } catch (err) {
+      res.status(404).send("Client not found.");
+    }
   }
 );
 
@@ -97,7 +114,6 @@ router.post(
   body("state").trim().exists(),
   body("cep").trim().exists().custom(isValidCep),
   param("cnpj").trim().custom(isValidCnpj),
-
   (req, res) => {
     // #swagger.tags = ['Addresses']
     // #swagger.description = 'Endpoint to register one  Address linked to one client by cnpj.'
@@ -128,10 +144,14 @@ router.patch(
     if (!errors.isEmpty()) {
       return res.status(400).json({ errors: errors.array() });
     }
-    const addressRep = new AddressRepository();
-    const id = req.params.id;
-    const updated = await addressRep.update(id, req.body);
-    res.status(200).send(updated);
+    try {
+      const addressRep = new AddressRepository();
+      const id = req.params.id;
+      const updated = await addressRep.update(id, req.body);
+      res.status(200).send(updated);
+    } catch (err) {
+      return res.status(404).json("Address not found.");
+    }
   }
 );
 
@@ -142,10 +162,14 @@ router.delete("/clients/address/:id", param("id").isUUID(), (req, res) => {
   if (!errors.isEmpty()) {
     return res.status(400).json({ errors: errors.array() });
   }
-  const id = req.params.id;
-  const addressRep = new AddressRepository();
-  addressRep.delete(id);
-  res.status(200).send(`deleted Address.`);
+  try {
+    const id = req.params.id;
+    const addressRep = new AddressRepository();
+    addressRep.delete(id);
+    res.status(200).send("deleted Address.");
+  } catch (err) {
+    return res.status(404).json("Address not found.");
+  }
 });
 
 router.get("/", (req, res) => {
